# TheRock

./: BUILD_TOPOLOGY.toml  CMakeLists.txt  FLAGS.cmake  RELEASES.md  requirements-test.txt  requirements.txt
.github/workflows/: build_linux_jax_wheels.yml  build_portable_linux_artifacts.yml  build_portable_linux_python_packages.yml  build_portable_linux_pytorch_wheels.yml  build_windows_artifacts.yml  build_windows_python_packages.yml  build_windows_pytorch_wheels.yml  ci.yml  ci_linux.yml  ci_nightly.yml  ci_nightly_pytorch_full_test.yml  ci_windows.yml  copy_release.yml  multi_arch_build_native_linux_packages.yml  multi_arch_build_portable_linux.yml  multi_arch_build_portable_linux_artifacts.yml  multi_arch_build_tarballs.yml  multi_arch_build_windows.yml  multi_arch_build_windows_artifacts.yml  multi_arch_ci.yml  multi_arch_ci_asan.yml  multi_arch_ci_linux.yml  multi_arch_ci_windows.yml  multi_arch_release.yml  multi_arch_release_linux.yml  setup.yml  (+14 more)
build_tools/: artifact_manager.py  build_python_packages.py  install_rocm_from_artifacts.py  pyproject.toml  setup_ccache.py
build_tools/github_actions/test_executable_scripts/hipdnn_install_tests/: CMakeLists.txt
comm-libs/: CMakeLists.txt  artifact-rocshmem.toml
compiler/: pre_hook_amd-comgr.cmake
core/: CMakeLists.txt
dctools/: CMakeLists.txt
debug-tools/: CMakeLists.txt
dockerfiles/: no_rocm_image_ubi10.Dockerfile
examples/: CMakeLists.txt
iree-libs/: CMakeLists.txt
math-libs/: CMakeLists.txt  artifact-prim.toml
ml-libs/: CMakeLists.txt  artifact-hipdnn-integration-tests.toml
profiler/: CMakeLists.txt
(+81 files in other folders)
